Criação da página 'Sobre Nós'

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="index.html">Início <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre.html">Sobre</a>
+                            <a class="nav-link" href="SobreNos.html">Sobre Nós</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="cursos.html">Cursos</a>
@@ -97,7 +97,7 @@
                         <h2>Sobre Nossa Associação</h2>
                         <p>Somos dedicados a promover um envelhecimento ativo, saudável e participativo. Nossa missão é oferecer programas, cursos e eventos que contribuam para a qualidade de vida e bem-estar da pessoa idosa, fomentando a autonomia, o convívio social e o aprendizado contínuo.</p>
                         <p>Acreditamos que envelhecer pode ser uma jornada rica e plena de novas descobertas.</p>
-                        <a href="sobre.html" class="btn btn-outline-primary">Conheça Mais</a>
+                        <a href="SobreNos.html" class="btn btn-outline-primary">Conheça Mais</a>
                     </div>
                     <div class="col-md-6 text-center">
                         <img src="img/SobreNos/SobreNos.jpeg" alt="Foto Sobre Nós - Descreva a Imagem" class="img-fluid rounded shadow">
@@ -194,7 +194,7 @@
             <div class="row">
                 <div class="col-md-4 mb-3 mb-md-0">
                     <h5>Associação</h5>
-                    <img src="img/logo-footer.png" alt="Logo Rodapé - Foto Logo" height="60" class="mb-2">
+                    <img src="img/LOGO.png" alt="Logo Rodapé - Foto Logo" height="60" class="mb-2">
                     <p class="small">Promovendo o Envelhecimento Humano Ativo e Saudável.</p>
                 </div>
                 <div class="col-md-4 mb-3 mb-md-0">
@@ -224,10 +224,7 @@
             </div>
             <hr>
             <div class="text-center small">
-                &copy; <span id="currentYear"></span> Associação de Promoção ao Envelhecimeneto Humano Ativo e Saudável. Todos os direitos reservados.
-            </div>
-            <div class="text-center small mt-2">
-                created by mgl_alvesc
+                &copy; <span id="currentYear"></span> Associação de Promoção ao Envelhecimeneto Humano Ativo e Saudável. Todos os direitos reservados. Created by @mgl_alvesc
             </div>
         </div>
     </footer>
