Criação da página'Participe'

--- a/Participe.html
+++ b/Participe.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós - Associação APEHAS</title>
+    <title>Participe - Associação APEHAS</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="css/SobreNos.css">
+    <link rel="stylesheet" href="css/Participe.css">
 </head>
 <body>
 
@@ -29,8 +29,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Início</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="SobreNos.html">Sobre Nós<span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="SobreNos.html">Sobre Nós</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="cursos.html">Cursos</a>
@@ -38,8 +38,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="eventos.html">Eventos</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Participe.html">Participe</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="Participe.html">Participe <span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
@@ -53,63 +53,56 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="page-title">Sobre Nossa Associação</h1>
-                        <p class="page-subtitle">Conheça nossa história, nossos valores e quem faz a APEHAS acontecer.</p>
+                        <h1 class="page-title">Junte-se a Nós</h1>
+                        <p class="page-subtitle">Sua participação fortalece nossa comunidade e transforma vidas.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="py-5">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 mb-4 mb-lg-0">
-                        <h2 class="section-heading">Nossa História</h2>
-                        <p>Fundada em [Ano de Fundação], a Associação de Promoção ao Envelhecimento Humano Ativo e Saudável (APEHAS) nasceu do sonho de criar um espaço acolhedor e estimulante para a população idosa. Desde o início, nosso foco tem sido combater o isolamento social e promover a autonomia, oferecendo atividades que nutrem o corpo, a mente e a alma.</p>
-                        <p>Ao longo dos anos, expandimos nossos programas e parcerias, sempre com o objetivo de valorizar a experiência de vida de cada indivíduo e construir uma comunidade mais inclusiva e solidária.</p>
-                    </div>
-                    <div class="col-lg-6">
-                        <img src="img/SobreNosPag/NossaHistoria.jpeg" class="img-fluid rounded shadow" alt="Imagem representando a história da associação">
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="py-5 bg-light">
+        <section id="section-associe-se" class="py-5 hidden-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 mb-4">
-                        <div class="mvv-card text-center">
-                            <div class="mvv-icon">
-                                <i class="fas fa-bullseye"></i>
+                    <div class="col-lg-10 mx-auto">
+                        <div class="associe-se-card">
+                            <div class="associe-se-icon">
+                                <i class="fas fa-users"></i>
                             </div>
-                            <h3 class="mvv-title">Missão</h3>
-                            <p class="mvv-text">Promover o envelhecimento ativo e saudável através de atividades sociais, educacionais e de bem-estar, valorizando a autonomia e a qualidade de vida da pessoa idosa.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="mvv-card text-center">
-                            <div class="mvv-icon">
-                                <i class="fas fa-eye"></i>
-                            </div>
-                            <h3 class="mvv-title">Visão</h3>
-                            <p class="mvv-text">Ser uma referência na promoção do envelhecimento digno e participativo, contribuindo para uma sociedade que respeita e valoriza seus idosos.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="mvv-card text-center">
-                            <div class="mvv-icon">
-                                <i class="fas fa-heart"></i>
-                            </div>
-                            <h3 class="mvv-title">Valores</h3>
-                            <p class="mvv-text">Respeito, Acolhimento, Solidariedade, Empatia e Inovação.</p>
+                            <h2 class="associe-se-title">Torne-se um Associado APEHAS</h2>
+                            <p class="associe-se-text">Sua participação é o motor que impulsiona nossas iniciativas. Ao se tornar um associado, você não apenas apoia diretamente nossa causa, mas se conecta a uma comunidade vibrante, ganha acesso a eventos e cursos exclusivos, e nos ajuda a construir um futuro com mais dignidade e alegria para todos.</p>
+                            <a href="associe-se.html" target="_blank" class="btn btn-cta-associado btn-lg">Quero Fazer Parte!</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        </main>
+        <section id="section-contato" class="py-5 bg-light hidden-section">
+            <div class="container">
+                <div class="text-center mb-5">
+                    <h2 class="section-heading">Outras Formas de Contato</h2>
+                    <p class="lead">Prefere falar conosco diretamente? Estamos aqui para ajudar.</p>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 mb-4">
+                        <h3 class="contact-subheading">Nossas Informações</h3>
+                        <ul class="list-unstyled contact-details">
+                            <li><i class="fas fa-map-marker-alt"></i> <span>Av. José Manoel Pereira, 252 - Avenida, Itajubá - MG, 37504-000</span></li>
+                            <li><i class="fab fa-whatsapp"></i> <span>(XX) XXXXX-XXXX</span></li>
+                            <li><i class="fas fa-envelope"></i> <span>contato@suaassociacao.org.br</span></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <h3 class="contact-subheading">Nossa Localização</h3>
+                        <div class="map-responsive">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d1843.9612847623484!2d-45.460199!3d-22.43194!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjLCsDI1JzU1LjAiUyA0NcKwMjcnMzYuNyJX!5e0!3m2!1spt-BR!2sbr!4v1749497895877!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
 
     <footer class="py-4">
         <div class="container">
@@ -132,7 +125,7 @@
                 <div class="col-md-4">
                     <h5>Contato</h5>
                     <p class="small">
-                        <i class="fas fa-map-marker-alt"></i> Endereço da Associação, Nº, Bairro, Cidade - UF<br>
+                        <i class="fas fa-map-marker-alt"></i> Av. José Manoel Pereira, 252 - Avenida, Itajubá - MG, 37504-000<br>
                         <i class="fas fa-phone"></i> (XX) XXXX-XXXX<br>
                         <i class="fas fa-envelope"></i> contato@suaassociacao.org.br
                     </p>
@@ -153,6 +146,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/SobreNos.js"></script>
+    <script src="js/Participe.js"></script>
 </body>
 </html>
