--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="eventos.html">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contato.html">Contato</a>
+                            <a class="nav-link" href="Participe.html">Participe</a>
                         </li>
                     </ul>
                 </div>
@@ -181,9 +181,9 @@
 
         <section id="associe-se-cta" class="py-5 text-white text-center">
             <div class="container">
-                <h2>Faça Parte da Nossa Comunidade!</h2>
-                <p class="lead">Junte-se a nós e contribua para um envelhecimento mais ativo, saudável e feliz.</p>
-                <a href="contato.html" class="btn btn-outline-light btn-lg ml-2">Entre em Contato</a>
+                <h2>Torne-se um Associado</h2>
+                <p class="lead">Ao se associar, você fortalece nossas iniciativas e ganha acesso a benefícios e atividades exclusivas.</p>
+                <a href="associe-se.html" target="_blank" class="btn btn-cta-associado btn-lg">Quero me Associar</a>
             </div>
         </section>
 
@@ -204,8 +204,7 @@
                         <li><a href="sobre.html">Sobre Nós</a></li>
                         <li><a href="cursos.html">Cursos</a></li>
                         <li><a href="eventos.html">Eventos</a></li>
-                        <li><a href="contato.html">Contato</a></li>
-                        <li><a href="associe-se.html">Associe-se</a></li>
+                        <li><a href="Participe.html">Participe</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
