--- a/APEHAS/Participe.html
+++ b/APEHAS/Participe.html
@@ -10,36 +10,39 @@
 </head>
 <body>
 
+    </head>
+<body>
+
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="img/logo.png" alt="Logo APEHAS" class="mr-2">
-                    <div class="navbar-brand-text-container">
-                        <span class="brand-line">Associação de Promoção ao</span>
-                        <span class="brand-line">Envelhecimento Humano</span>
-                        <span class="brand-line">Ativo e Saudável</span>
-                    </div>
-                </a>
+    <img src="img/logo.png" alt="Logo APEHAS" class="">
+    <div class="navbar-brand-text-container">
+        <span class="brand-line">Associação de Promoção ao</span>
+        <span class="brand-line">Envelhecimento Humano</span>
+        <span class="brand-line">Ativo e Saudável</span>
+    </div>
+</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Início</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Início <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="SobreNos.html">Sobre Nós</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="cursos.html">Cursos</a>
+                            <a class="nav-link" href="cursos.php">Cursos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="eventos.html">Eventos</a>
+                            <a class="nav-link" href="eventos.php">Eventos</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="Participe.html">Participe <span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Participe.html">Participe</a>
                         </li>
                     </ul>
                 </div>
