--- a/APEHAS/index.html
+++ b/APEHAS/index.html
@@ -33,10 +33,10 @@
                             <a class="nav-link" href="SobreNos.html">Sobre Nós</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="cursos.html">Cursos</a>
+                            <a class="nav-link" href="cursos.php">Cursos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="eventos.html">Eventos</a>
+                            <a class="nav-link" href="eventos.php">Eventos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="Participe.html">Participe</a>
